--- a/gratidao-pix.html
+++ b/gratidao-pix.html
@@ -31,6 +31,19 @@ onclick="navigator.clipboard.writeText('05475258856'); alert('Chave PIX copiada!
 class="w-full bg-[#15803D] py-3 rounded-xl font-bold uppercase text-xs shadow-lg mb-6">
 📋 COPIAR CHAVE PIX
 </button>
+    <!-- BOTÃO COPIAR -->
+<button 
+onclick="navigator.clipboard.writeText('05475258856'); alert('Chave PIX copiada!');"
+class="w-full bg-[#15803D] py-3 rounded-xl font-bold uppercase text-xs shadow-lg mb-4">
+📋 COPIAR CHAVE PIX
+</button>
+
+<!-- BOTÃO WHATSAPP -->
+<button 
+onclick="window.open('https://wa.me/5516997594551?text=Olá%20Pastor!%20Acabei%20de%20realizar%20minha%20oferta%20via%20PIX%20para%20a%20Missão%20Peru.%20Segue%20meu%20comprovante.%20🙏🇵🇪', '_blank')" 
+class="w-full bg-[#25D366] text-white py-3 rounded-xl font-bold uppercase text-xs shadow-lg mb-6">
+📲 ENVIAR COMPROVANTE PELO WHATSAPP
+</button>
 
 <!-- CONTADOR DE APOIADORES -->
 <div class="bg-white/10 p-4 rounded-xl mb-6">
@@ -80,4 +93,5 @@ function confirmarPagamento(){
 
 </body>
 </html>
+
 
