--- a/gratidao-mensal.html
+++ b/gratidao-mensal.html
@@ -18,21 +18,26 @@ Compromisso Confirmado!
 </h1>
 
 <p class="text-gray-200 text-sm mb-6 leading-relaxed">
-Seu apoio mensal pelos próximos 12 meses fortalece a missão em Tacna.
-Você agora faz parte da base que sustenta vidas transformadas.
+Você agora faz parte da base que sustenta a Missão Peru em Tacna.
+Sua fidelidade mensal fortalece vidas e famílias.
 </p>
 
 <div class="bg-[#E8B923] text-[#000814] p-4 rounded-xl text-xs font-bold mb-6">
-APOIADOR OFICIAL MISSÃO PERU 🇵🇪
+🏅 PARCEIRO OFICIAL DA MISSÃO PERU
 </div>
 
-<p class="italic text-white text-xs mb-6">
-"Assim como o Pai me enviou, eu também vos envio."
-<br>— João 20:21
-</p>
+<div class="bg-[#15803D] p-5 rounded-2xl text-sm leading-relaxed mb-6">
+🙏 <b>Oração por Você:</b><br><br>
+Senhor, fortalece este mantenedor.
+Que sua casa seja sustentada,
+que seus recursos sejam multiplicados,
+e que ele experimente o cuidado do Senhor
+em cada área da sua vida.
+Em nome de Jesus, amém.
+</div>
 
 <a href="index.html"
-class="block w-full bg-black py-4 rounded-xl font-bold uppercase text-xs shadow-lg">
+class="block w-full bg-black py-3 rounded-xl font-bold uppercase text-xs shadow-lg">
 VOLTAR AO APP
 </a>
 
