--- a/gratidao-pix.html
+++ b/gratidao-pix.html
@@ -31,21 +31,12 @@ onclick="navigator.clipboard.writeText('05475258856'); alert('Chave PIX copiada!
 class="w-full bg-[#15803D] py-3 rounded-xl font-bold uppercase text-xs shadow-lg mb-6">
 📋 COPIAR CHAVE PIX
 </button>
-    <!-- BOTÃO COPIAR -->
-<button 
-onclick="navigator.clipboard.writeText('05475258856'); alert('Chave PIX copiada!');"
-class="w-full bg-[#15803D] py-3 rounded-xl font-bold uppercase text-xs shadow-lg mb-4">
-📋 COPIAR CHAVE PIX
-</button>
-
-<!-- BOTÃO WHATSAPP -->
-<button 
-onclick="window.open('https://wa.me/5516997594551?text=Olá%20Pastor!%20Acabei%20de%20realizar%20minha%20oferta%20via%20PIX%20para%20a%20Missão%20Peru.%20Segue%20meu%20comprovante.%20🙏🇵🇪', '_blank')" 
+    <button 
+onclick="window.open('https://wa.me/5516997594551?text=Olá%20Pastor!%20Segue%20meu%20comprovante%20de%20oferta.%0A%0ANome:%20%0AValor:%20%0AData:%20%0A%0A🙏🇵🇪', '_blank')" 
 class="w-full bg-[#25D366] text-white py-3 rounded-xl font-bold uppercase text-xs shadow-lg mb-6">
 📲 ENVIAR COMPROVANTE PELO WHATSAPP
 </button>
-
-<!-- CONTADOR DE APOIADORES -->
+  <!-- CONTADOR DE APOIADORES -->
 <div class="bg-white/10 p-4 rounded-xl mb-6">
 <p class="text-xs uppercase text-gray-400 mb-1">Apoiadores até agora</p>
 <p id="contador" class="text-2xl font-black text-[#E8B923]">0</p>
@@ -93,5 +84,6 @@ function confirmarPagamento(){
 
 </body>
 </html>
+
 
 
