--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Missão Peru</title>
-    <!-- <link rel="manifest" href="manifest.json"> -->
+   <link rel="manifest" href="manifest.json">
+<link rel="icon" href="logo-missao-peru.png">
+<link rel="apple-touch-icon" href="logo-missao-peru.png">
     <meta name="theme-color" content="#15803D">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -118,6 +120,7 @@ class="bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs 
     </script>
 </body>
 </html>
+
 
 
 
