--- a/index.html
+++ b/index.html
@@ -68,11 +68,34 @@ MISSÃO PERU
 
     <main class="p-4 max-w-md mx-auto">
         <div id="home" class="section active text-center">
-            <div class="card mb-6">
-                <h2 class="text-[#E8B923] font-black uppercase mb-4">Apresentação</h2>
-                <p class="text-sm text-gray-300 italic mb-4">Conectando corações à obra missionária em Tacna.</p>
-                <button onclick="showSection('projeto')" class="w-full bg-[#15803D] py-4 rounded-xl font-black text-xs uppercase shadow-lg">Como Instalar o App</button>
-            </div>
+        <div class="card mb-6 space-y-5">
+
+  <h2 class="text-xl font-black text-[#EBB923] uppercase">
+    Uma Missão Que Nasceu no Coração de Deus
+  </h2>
+
+  <p class="text-white/80 leading-relaxed text-sm">
+    Este aplicativo não é apenas tecnologia.
+    Ele é fruto de oração, entrega e obediência ao chamado missionário.
+  </p>
+
+  <p class="text-white/80 leading-relaxed text-sm">
+    Em Tacna, vidas estão sendo alcançadas,
+    famílias estão sendo restauradas
+    e o Evangelho está sendo proclamado.
+  </p>
+
+  <p class="text-[#EBB923] font-semibold italic text-sm">
+    Missões não começam no campo.
+    Começam no coração.
+  </p>
+
+  <button onclick="showSection('doar')" 
+    class="w-full bg-[#EBB923] text-black font-bold py-4 rounded-xl uppercase shadow-lg">
+    Quero Fazer Parte da Missão
+  </button>
+
+</div>  
         </div>
 
         <div id="palavra" class="section text-center">
@@ -184,6 +207,7 @@ if ("serviceWorker" in navigator) {
     </script>
 </body>
 </html>
+
 
 
 
