--- a/index.html
+++ b/index.html
@@ -94,7 +94,17 @@ MISSÃO PERU
     class="w-full bg-[#EBB923] text-black font-bold py-4 rounded-xl uppercase shadow-lg">
     Quero Fazer Parte da Missão
   </button>
+<!-- 🔥 BOTÃO DESAFIO MISSIONÁRIO -->
+<button onclick="iniciarDesafio()"
+class="w-full bg-[#15803D] text-white font-bold py-4 rounded-xl uppercase shadow-lg mt-4">
+  DESAFIO MISSIONÁRIO
+</button>
 
+<!-- 🔥 CONTAINER DO QUIZ -->
+<div id="quiz-container" class="hidden text-center space-y-4 mt-6">
+  <h3 id="pergunta" class="text-white text-lg font-bold"></h3>
+  <div id="respostas" class="space-y-3"></div>
+</div>
 </div>  
         </div>
 
@@ -186,6 +196,73 @@ window.addEventListener("load", function () {
     }
   }, 1200);
 }); 
+        <script>
+
+window.onload = () => { carregarDevocional(); };
+
+// 🔥 AQUI VAI O CÓDIGO DO DESAFIO MISSIONÁRIO
+let perguntas = [];
+let perguntaAtual = 0;
+let pontuacao = 0;
+
+function iniciarDesafio() {
+  fetch("./questions.json")
+    .then(response => response.json())
+    .then(data => {
+      perguntas = data;
+      perguntaAtual = 0;
+      pontuacao = 0;
+      document.getElementById("quiz-container").classList.remove("hidden");
+      mostrarPergunta();
+    });
+}
+
+function mostrarPergunta() {
+  if (perguntaAtual >= perguntas.length) {
+    finalizarDesafio();
+    return;
+  }
+
+  const pergunta = perguntas[perguntaAtual];
+  document.getElementById("pergunta").innerText = pergunta.pergunta;
+
+  const respostasDiv = document.getElementById("respostas");
+  respostasDiv.innerHTML = "";
+
+  pergunta.respostas.forEach((resposta, index) => {
+    const btn = document.createElement("button");
+    btn.innerText = resposta;
+    btn.className = "w-full bg-[#15803D] text-white py-3 rounded-xl font-bold";
+    btn.onclick = () => verificarResposta(index);
+    respostasDiv.appendChild(btn);
+  });
+}
+
+function verificarResposta(index) {
+  if (index === perguntas[perguntaAtual].correta) {
+    pontuacao++;
+  }
+
+  perguntaAtual++;
+  mostrarPergunta();
+}
+
+function finalizarDesafio() {
+  document.getElementById("quiz-container").innerHTML = `
+    <h3 class="text-xl font-bold text-[#EBB923]">Desafio Concluído!</h3>
+    <p class="text-white mt-4">Sua pontuação: ${pontuacao} / ${perguntas.length}</p>
+    <button onclick="iniciarDesafio()" 
+      class="mt-6 w-full bg-[#EBB923] text-black py-3 rounded-xl font-bold">
+      Refazer Desafio
+    </button>
+  `;
+}
+
+</script>
+
+<!-- NÃO MEXA NESSE -->
+<script>
+if ('serviceWorker' in navigator) {
     </script>
 
 <script>
@@ -207,6 +284,7 @@ if ("serviceWorker" in navigator) {
     </script>
 </body>
 </html>
+
 
 
 
