--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@ onclick="navigator.clipboard.writeText('05475258856'); window.location.href='gra
 class="bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs shadow-lg w-full">
 🪙 OFERTA ÚNICA (PIX)
 </button>
-                <button onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScvuR68w5vxsJDBw-Y1ZuXDv78AO7UO-rTYtd3rHEoguYHpjg/viewform?usp=dialog'" class="bg-[#15803D] text-white p-6 rounded-2xl font-black text-sm shadow-lg">🤝 APOIO MENSAL<br><span class="text-[10px]">Torne-se um mantenedor</span></button>
+               <button 
+onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScyuR68w5vxsJDBw-YIzuXDv78AO7U0-rTYtd3rHEoguYHpjs/viewform?usp=dialog', '_blank')"
+class="bg-[#15803D] text-white py-4 rounded-xl font-bold uppercase text-xs shadow-lg w-full">
+  APOIAR 12 MESES
+</button>
             </div>
         </div>
     </main>
@@ -284,6 +288,7 @@ if ("serviceWorker" in navigator) {
     </script>
 </body>
 </html>
+
 
 
 
