--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ class="bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs 
     
 <button onclick="window.open('https://forms.gle/ZUi3vMAcYoZLeHui7', '_blank')"
 class="bg-[#15803D] text-white py-4 rounded-xl font-bold uppercase w-full">
-APOIAR 12 MESES
+FAZER PARTE DA MISSÃO
 </button>
             </div>
         </div>
@@ -282,6 +282,7 @@ if ("serviceWorker" in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
