--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ class="bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs 
 🪙 OFERTA ÚNICA (PIX)
   </button>
     
-<button onclick="window.open('https://forms.gle/ZUi3vMAcYoZLeHui7', '_blank')"
+<button onclick="window.open('https://forms.gle/wFGRnfoaL9hNZhw49', '_blank')"
 class="bg-[#15803D] text-white py-4 rounded-xl font-bold uppercase w-full">
 FAZER PARTE DA MISSÃO
 </button>
@@ -282,6 +282,7 @@ if ("serviceWorker" in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
